refactor: 인텔리제이 경고 부분 수정